--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ pytest = "*"
 
 [packages]
 e1839a8 = {editable = true,path = "."}
+lissero = {editable = true,path = "."}
 
 [requires]
 python_version = "3.7"
