--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,10 +19,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - uses: goanpeca/setup-miniconda@v1
       with:
+        auto-update-conda: true
         python-version: ${{ matrix.python-version }}
+        channels: conda-forge, bioconda
+    - name: Install conda dependencies
+      run: |
+        conda install blast
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
