--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,9 +29,8 @@ jobs:
         conda install blast
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        pip install .
+        conda install flake8 pytest
+        pip3 install .
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
