--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
         conda install blast
     - name: Install dependencies
       run: |
-        conda install flake8 pytest
+        conda install -U pip setuptools flake8 pytest
         pip3 install .
     - name: Lint with flake8
       run: |
