--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,26 +25,19 @@ jobs:
         python-version: ${{ matrix.python-version }}
         channels: conda-forge, bioconda
         activate-environment: lissero
-    - name: Install conda dependencies
+    - name: Install LisSero and dependencies
       shell: bash -l {0}
       run: |
-        conda install blast
-    - name: Install LisSero dependencies
-      shell: bash -l {0}
-      run: |
-        conda env list
-        which python
-        which python3
-        which pip
-        which pip3
-        conda install flake8 pytest
+        conda install blast flake8 pytest
         pip install .
     - name: Lint with flake8
+      shell: bash -l {0}
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
+      shell: bash -l {0}
       run: |
         pytest tests
