--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,6 +16,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
+        blast-version: [2.9.0]
 
     steps:
     - uses: actions/checkout@v2
@@ -28,7 +29,7 @@ jobs:
     - name: Install BLAST
       shell: bash -l {0}
       run: |
-        conda install blast
+        conda install blast=${{matrix.blast-version}}
     - name: Install LisSero and dependencies
       shell: bash -l {0}
       run: |
@@ -44,4 +45,4 @@ jobs:
     - name: Test with pytest
       shell: bash -l {0}
       run: |
-        pytest tests
+        pytest tests --blast-version ${{matrix.blast-version}}
