Update CI to ignore certain paths
Ignore paper.md and README.md

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -6,6 +6,9 @@ name: Python package
 on:
   push:
     branches: [ master ]
+    paths:
+      - '!paper.md'
+      - '!README.md'
   pull_request:
     branches: [ master ]
 
