--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
-        blast-version: [2.9.0]
+        blast-version: [2.9.0, 2.10.1]
 
     steps:
     - uses: actions/checkout@v2
