--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -12,8 +12,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -48,3 +47,26 @@ jobs:
       shell: bash -l {0}
       run: |
         pytest tests --blast-version ${{matrix.blast-version}}
+
+  build-n-publish:
+      name: Build and publish Python 🐍 distributions 📦 to PyPI and TestPyPI
+      needs: test
+      runs-on: ubuntu-18.04
+      steps:
+        - uses: actions/checkout@master
+        - name: Set up Python 3.7
+          uses: actions/setup-python@v1
+          with:
+            python-version: 3.7
+        - name: Publish distribution 📦 to Test PyPI
+          uses: pypa/gh-action-pypi-publish@master
+          with:
+            user: __token__
+            password: ${{ secrets.test_pypi_password }}
+            repository_url: https://test.pypi.org/legacy/
+        - name: Publish distribution 📦 to PyPI
+          if: startsWith(github.ref, 'refs/tags')
+          uses: pypa/gh-action-pypi-publish@master
+          with:
+            user: __token__
+            password: ${{ secrets.pypi_password }}
