--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -12,6 +12,8 @@ on:
     branches: [ master ]
   workflow_dispatch:
     branches: [ master ]
+    tags:
+      description: "Testing workflow"
 
 jobs:
   test:
@@ -81,7 +83,7 @@ jobs:
             password: ${{ secrets.test_pypi_password }}
             repository_url: https://test.pypi.org/legacy/
         - name: Publish distribution 📦 to PyPI
-          if: startsWith(github.ref, 'refs/tags')
+          if: startsWith(github.ref, 'refs/tags') || startsWith(github.event.inputs.tags, 'Deploy')
           uses: pypa/gh-action-pypi-publish@master
           with:
             user: __token__
