Add inputs tag to workflow_dispatch

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -12,8 +12,9 @@ on:
     branches: [ master ]
   workflow_dispatch:
     branches: [ master ]
-    tags:
-      description: "Testing workflow"
+    inputs:
+      tags:
+        description: "Testing workflow"
 
 jobs:
   test:
