--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -83,9 +83,11 @@ jobs:
             user: __token__
             password: ${{ secrets.test_pypi_password }}
             repository_url: https://test.pypi.org/legacy/
+            skip_existing: true
         - name: Publish distribution 📦 to PyPI
           if: startsWith(github.ref, 'refs/tags') || startsWith(github.event.inputs.tags, 'Deploy')
           uses: pypa/gh-action-pypi-publish@master
           with:
             user: __token__
             password: ${{ secrets.pypi_password }}
+            skip_existing: true
