Add restriction to workflow to run on master and main

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,7 +5,11 @@ name: Python package
 
 on:
   push:
-    branches: [ master ]
+    tags:
+      - v*
+    branches:
+      - 'master'
+      - 'main'
     paths:
       - '**.py'
   pull_request:
