Add test for blast version 2.11.0

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
-        blast-version: [2.9.0, 2.10.1]
+        blast-version: [2.9.0, 2.10.1, 2.11.0]
 
     steps:
     - uses: actions/checkout@v2
