--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Bio-Informatics",
     "Development Status :: 5 - Production/Stable",
 ]
-dependencies = ["biopython>=1.78", "py-fasta-validador>=0.6", "loguru>=0.6"]
+dependencies = ["biopython>=1.78", "py-fasta-validator>=0.6", "loguru>=0.6"]
 dynamic = ["version"]
 
 [project.urls]
