--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,7 +48,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       # Create conda environment using mamba
-      - name: Create Conda environment with mlst
+      - name: Create Conda environment with blast
         shell: bash -el {0}
         run: |
           mamba create -n lissero -c bioconda blast
@@ -56,23 +56,25 @@ jobs:
           blastn -version
           # install flake8 and pytest for testing/linting
           conda install -y flake8 pytest pytest-cov
+          pytest
 
-      # Install the current package
-      - name: Install the current package
-        shell: bash -el {0}
-        run: |
-          conda activate lissero
-          pip install .
-          echo "Installed package version:"
-          lissero --version
 
-      # test the package
-      - name: Test the package
-        shell: bash -l {0}
-        run: |
-          set -euo pipefail
-          conda activate lissero
-          lissero lissero/test_data/*
+    #   # Install the current package
+    #   - name: Install the current package
+    #     shell: bash -el {0}
+    #     run: |
+    #       conda activate lissero
+    #       pip install .
+    #       echo "Installed package version:"
+    #       lissero --version
+
+    #   # test the package
+    #   - name: Test the package
+    #     shell: bash -l {0}
+    #     run: |
+    #       set -euo pipefail
+    #       conda activate lissero
+    #       lissero lissero/test_data/*
 
       # lint with flake8
       - name: Lint with flake8
